theme/scss/_spending.scss
svg {
	display: block;
	margin: .75em auto;
	max-width: calc(100% - .5em);
	@media (min-width: 820px) {
		max-width: 800px;
	}
	* {
		shape-rendering: crispEdges;
	}
}
#monthtrend {
	.grid line {
		stroke: $darkgreyblue;
	}
	rect.made, rect.spent {
		fill: $blue;
	}
	rect.net.gain {
		fill: $green;
	}
	rect.net.loss {
		fill: $orange;
	}
}
#spendmonthcat {
	text-align: center;
	& > div {
		text-align: left;
		display: inline-block;
		font-size: .8em;
		width: auto;
		max-width: 100%;
		max-height: calc(100vh - 4.5em);
		overflow: auto;
		margin: .75em auto;
		position: relative;
	}
	table {
		border-spacing: 0;
		border-collapse: collapse;
		table-layout: fixed;
		th, td {
			font-weight: normal;
			margin: 0;
			padding: .25em .5em;
			white-space: nowrap;
		}
		thead th {
			text-align: right;
		}
		a {
			display: block;
			text-decoration: none;
			color: #000;
			text-align: right;
		}
		tbody {
			tr:nth-child(odd) {
				background-color: $lightgreyblue;
			}
			tr.total {
				background-color: #fff;
			}
			th {
				text-align: left;
			}
		}
	}
	header {
		background-color: $medgreyblue;
		position: absolute;
		top: 0;
		left: 0;
		&.top {
			white-space: nowrap;
			.h {
				display: inline-block;
				padding: .25em .5em;
				white-space: nowrap;
				text-align: right;
			}
		}
		&.left {
			.h {
				padding: .25em .5em;
				white-space: nowrap;
				&:nth-child(odd) {
					background-color: $lightgreyblue;
				}
				&.total {
					background-color: #fff;
				}
			}
		}
	}
}

